<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:background="@drawable/talk_selector"
    android:layout_marginBottom="5dp"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="5dp">

    <org.devcon.android.ui.RobotoLightTV
        android:id="@+id/tv_time"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/time"
        android:focusable="false"
        android:fontFamily="sans-serif-light"
        android:gravity="fill"
        android:paddingLeft="3dp"
        android:text="@string/t_time"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <org.devcon.android.ui.RobotoCondensedTV
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/talk_title"
        android:textSize="20sp"
        android:layout_marginLeft="5dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/atf"
        android:layout_toRightOf="@+id/tv_time" />

    <org.devcon.android.ui.RobotoLightTV
        android:id="@+id/tv_speaker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_title"
        android:layout_below="@+id/tv_title"
        android:fontFamily="sans-serif-light"
        android:textSize="15sp"
        android:gravity="center_vertical" />

    <Button
        android:id="@+id/atf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/remove"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_alignParentRight="true" />

</RelativeLayout>